# dropkick

./: CMakeLists.txt  MANIFEST.in  inject_version.py  pyproject.toml
dropkick/: __init__.py  _version.py
